--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,7 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+	<!-- Margins -->
+	<dimen name="com_dhsoftware_android_marginSize_big">15dp</dimen>
+	<dimen name="com_dhsoftware_android_marginSize_normal">7dp</dimen>
 
+	<!-- Text -->
+	<dimen name="com_dhsoftware_android_textSize_big">19sp</dimen>
+	<dimen name="com_dhsoftware_android_textSize_normal">14sp</dimen>
 </resources>
