--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -61,6 +61,12 @@
                 android:maxLines="1"
                 android:singleLine="true" />
 
+            <CheckBox
+                android:id="@+id/stayloggedBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/staylogged" />
+
             <Button
                 android:id="@+id/sign_in_button"
                 android:layout_width="wrap_content"
