--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,5 +5,6 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item android:id="@+id/action_logout" android:orderInCategory="200" android:title="@string/logout" android:onClick="logout"></item>
 
 </menu>
